--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-@media only screen and (min-device-width: 992px) and (max-device-width: 1200px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 992px) {
     .main-image {
-        padding-top: 25px;
+        width: 100%;
+        height: 350px;
+        object-fit: fill;
     }
 }
 
